#3437 Add more robust equal heights style and plugin (grid view)

--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -14,6 +14,8 @@
   <script src="/js/nf-searchbar.js"></script>
   <script src="/js/nf-solr-search.js"></script>
 
+  <script src="/js/vendor/jquery.equalHeight.js"></script>
+
   <script>
     $(document).ready(function(){
       $(document).foundation();
@@ -28,6 +30,9 @@
       $('#nf-menu-top').menuToggle();
       $('#nf-menu-main').menuToggle();
       $('#nf-menu-main-blue').menuToggle();
+
+      // Equalheight
+      $('.grid-style--bordered .grid-item').equalHeight('style-bordered');
 
       // Solr search setup
       nfSolr.setup();
@@ -79,19 +84,20 @@
       }
     })();
   </script>
-<!--
-<script src="js/foundation/foundation.js"></script>
-<script src="js/foundation/foundation.alerts.js"></script>
-<script src="js/foundation/foundation.clearing.js"></script>
-<script src="js/foundation/foundation.cookie.js"></script>
-<script src="js/foundation/foundation.dropdown.js"></script>
-<script src="js/foundation/foundation.forms.js"></script>
-<script src="js/foundation/foundation.joyride.js"></script>
-<script src="js/foundation/foundation.magellan.js"></script>
-<script src="js/foundation/foundation.orbit.js"></script>
-<script src="js/foundation/foundation.placeholder.js"></script>
-<script src="js/foundation/foundation.reveal.js"></script>
-<script src="js/foundation/foundation.section.js"></script>
-<script src="js/foundation/foundation.tooltips.js"></script>
-<script src="js/foundation/foundation.topbar.js"></script>
--->
+
+  <!--
+  <script src="js/foundation/foundation.js"></script>
+  <script src="js/foundation/foundation.alerts.js"></script>
+  <script src="js/foundation/foundation.clearing.js"></script>
+  <script src="js/foundation/foundation.cookie.js"></script>
+  <script src="js/foundation/foundation.dropdown.js"></script>
+  <script src="js/foundation/foundation.forms.js"></script>
+  <script src="js/foundation/foundation.joyride.js"></script>
+  <script src="js/foundation/foundation.magellan.js"></script>
+  <script src="js/foundation/foundation.orbit.js"></script>
+  <script src="js/foundation/foundation.placeholder.js"></script>
+  <script src="js/foundation/foundation.reveal.js"></script>
+  <script src="js/foundation/foundation.section.js"></script>
+  <script src="js/foundation/foundation.tooltips.js"></script>
+  <script src="js/foundation/foundation.topbar.js"></script>
+  -->
