#3437 Cleanup header bar markup

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -10,8 +10,14 @@
 </div>
 
 <nav id="nf-menu-top" class="nf-menu nf-white nf-small">
-  <section class="nf-brand"><a href="/">Newsfront</a></section>
-  <section class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Meny</a></section>
+  <section class="nf-brand">
+    <a href="/">Newsfront</a>
+  </section>
+
+  <section class="nf-toggle-sub" data-toggle=".nf-section-sub">
+    <a href="#">Meny</a>
+  </section>
+
   <section class="nf-section-keep">
     <ul>
       <li>
@@ -22,6 +28,7 @@
       <li class="divider"></li>
     </ul>
   </section>
+
   <section class="nf-section-main">
     <ul>
       <li><a href="/meninger/">Meninger</a></li>
@@ -32,6 +39,7 @@
       <li class="divider"></li>
     </ul>
   </section>
+
   <section class="nf-section-sub">
     <ul>
       <li><a href="#">Forside</a></li>
