--- a/_sass/partials/global/_variables.scss
+++ b/_sass/partials/global/_variables.scss
@@ -5,16 +5,24 @@
 $font-family-sans: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;;
 $font-family-bold: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
 
+
 // Colors
 $color-top-border: #DDD;
+
+
+// Header
+$color-header-bg: #C00;
+$color-header-color: white;
 
 
 // Lists variables
 $article-list-border-color: #E5E5E5;
 $article-list-link-color:   #333333;
 
+
 // Grid styles
 $grid-style-border-color: #D6D6D6;
+
 
 // Global Footer variables
 $footer-logo:         'nf-logo-light.png';
