Implement re-factored menu component

--- a/_includes/menu-main-blue.html
+++ b/_includes/menu-main-blue.html
@@ -1,7 +1,9 @@
-<nav id="nf-menu-main-blue" class="nf-menu nf-blue nf-medium">
-  <section class="nf-brand"><a href="/">Newsblu</a></section>
-  <section class="nf-toggle-main" data-toggle=".nf-section-main"><a href="#">Seksjoner</a></section>
-  <section class="nf-section-main">
+<nav id="nf-menu-main-blue" class="nf-menu nf-menu--blue nf-menu--medium">
+  <h2 class="nf-brand"><a href="/">Newsblu</a></h2>
+
+  <span class="nf-toggle-main" data-toggle=".nf-section-main"><a href="#">Seksjoner</a></span>
+
+  <div class="nf-section-main">
     <ul>
       <li class=""><a href="#">Nyheter</a></li>
         <li class="divider"></li>
@@ -12,5 +14,5 @@
         <li class=""><a href="#">Helse</a></li>
         <li class=""><a href="#">Også fra nyhetsbildet</a></li>
     </ul>
-  </section>
+  </div>
 </nav>
