--- a/_includes/menu-main.html
+++ b/_includes/menu-main.html
@@ -1,7 +1,9 @@
-<nav id="nf-menu-main" class="nf-menu nf-red nf-large">
-  <section class="nf-brand"><a href="#">FORSIDE</a></section>
-  <section class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Seksjoner</a></section>
-  <section class="nf-section-main">
+<nav id="nf-menu-main" class="nf-menu nf-menu--red nf-menu--large">
+  <h2 class="nf-brand"><a href="#">FORSIDE</a></h2>
+
+  <span class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Seksjoner</a></span>
+
+  <div class="nf-section-main">
     <ul>
       <li><a href="#">Nyheter</a></li>
       <li class="divider"></li>
@@ -16,8 +18,9 @@
       <li><a href="#">Også fra nyhetsbildet</a></li>
       <li class="divider"></li>
     </ul>
-  </section>
-  <section class="nf-section-sub">
+  </div>
+
+  <div class="nf-section-sub">
     <ul>
       <li><a href="#">Nyheter</a></li>
       <li class="divider"></li>
@@ -36,5 +39,5 @@
       <li class="divider"></li>
       <li><a href="#">Også fra nyhetsbildet</a></li>
     </ul>
-  </section>
+  </div>
 </nav>
