--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -9,16 +9,12 @@
   </form>
 </div>
 
-<nav id="nf-menu-top" class="nf-menu nf-white nf-small">
-  <section class="nf-brand">
-    <a href="/">Newsfront</a>
-  </section>
+<nav id="nf-menu-top" class="nf-menu nf-menu--white nf-menu--small">
+  <h2 class="nf-brand"><a href="/">Newsfront</a></h2>
 
-  <section class="nf-toggle-sub" data-toggle=".nf-section-sub">
-    <a href="#">Meny</a>
-  </section>
+  <span class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Meny</a></span>
 
-  <section class="nf-section-keep">
+  <div class="nf-section-keep">
     <ul>
       <li>
         <a href="/s/" class="nf-show-searchbox">
@@ -27,9 +23,9 @@
       </li>
       <li class="divider"></li>
     </ul>
-  </section>
+  </div>
 
-  <section class="nf-section-main">
+  <div class="nf-section-main">
     <ul>
       <li><a href="/meninger/">Meninger</a></li>
       <li class="divider"></li>
@@ -38,9 +34,9 @@
       <li><a href="/abonner/">Abonnér</a></li>
       <li class="divider"></li>
     </ul>
-  </section>
+  </div>
 
-  <section class="nf-section-sub">
+  <div class="nf-section-sub">
     <ul>
       <li><a href="#">Forside</a></li>
       <li><a href="#">Meninger</a></li>
@@ -59,5 +55,5 @@
       <li><a href="#">Om oss</a></li>
       <li><a href="#">A-Å</a></li>
     </ul>
-  </section>
+  </div>
 </nav>
