--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -5,4 +5,5 @@
 @import 'partials/footer';
 @import 'partials/grid-styles';
 @import 'partials/hero';
+@import 'partials/menus';
 @import 'partials/series';
