#3437 Move out obsolete files; refactor markup for search and headers

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,7 +1,7 @@
 
 <div>
   <form class="nf-searchbar" action="/s/" method="get">
-    <div class="row">
+    <div>
       <input type="text" name="q" placeholder="Søk Newsfront...">
       <input type="submit" value="">
       <span class="nf-search-cancel"></span>
@@ -18,7 +18,7 @@
     <ul>
       <li>
         <a href="/s/" class="nf-show-searchbox">
-          <img style="padding: 4px 0 0 4px" src="/img/icon-search.png">
+          <img alt="" src="/img/icon-search.png">
         </a>
       </li>
       <li class="divider"></li>
