--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,51 +1,16 @@
 
-<article itemscope="" itemtype="http://schema.org/Article" class="serp row" style="display: none;">
+<article itemscope="" itemtype="http://schema.org/Article" class="serp row" hidden>
+  <div class="grid-3">
+    <a href="#"><img data-src="" src="" alt=""></a>
+  </div>
 
-
-      <div class="story-image lazy-image small-3 columns">
-        <a class="story-link lazy-image-link" href="#">
-
-          <img class="story-image-img lazy-image-img lazy-image-start-index loading-show-spinner-16x16 got-offset" data-src="http://static.digg.com/images/10VdTgT_1_www_large_thumb.jpeg" src="http://static.digg.com/images/10VdTgT_1_www_large_thumb.jpeg" width="233" height="127" alt="">
-
-        </a>
-      </div>
-
-      <div class="story-content small-9 columns">
-        <header class="story-header">
-
-<!--           <div itemprop="alternativeHeadline" class="story-kicker">
-            YEARBOOK MESSAGE INCLUDES PHRASE 'FOXY'
-          </div> -->
-
-          <h2 itemprop="headline" class="story-title serp-title">
-            <a class="" rel="bookmark" itemprop="url" href="http://swampland.time.com/2013/05/23/time-exclusive-obamas-1979-prom-photos/?iid=sl-main-lead">
-
-              <mark>Obama</mark>s viltre ungdomstid
-            </a>
-            <br>
-          </h2>
-
-          <!-- <div class="story-meta">
-            <span class="story-meta-item story-source">
-              <a itemprop="publisher copyrightHolder sourceOrganization provider" class="story-meta-item-link story-source-link" href="/source/swampland.time.com">
-
-                Swampland - TIME
-
-              </a>
-            </span>
-
-            <span class="story-meta-item story-tag first-tag">
-              <a itemprop="keywords" rel="tag" class="story-meta-item-link story-tag-link" href="/tag/photos">Photos</a>
-            </span>
-
-            <abbr class="published story-meta-item story-timestamp" title="2013-05-23 11:07:24"><time datetime="2013-05-23 11:07:24">2w</time></abbr>
-          </div> -->
-
-
-        </header>
-        <p class="story-date"></p>
-        <p itemprop="description" class="story-description">Én ting har USAs 10 siste presidenter til felles: Ungdomstiden deres var fylt med fester, fester og atter fester. <mark>Obama</mark> og kona er intet unntak. Se hva som gjør at de ikke liker å vise ... </p>
-
-      </div>
-
+  <div class="grid-9 omega">
+    <header>
+      <h2 itemprop="headline" class="story-title serp-title">
+        <a rel="bookmark" itemprop="url" href="#"></a>
+      </h2>
+    </header>
+    <p class="story-date"></p>
+    <p itemprop="description" class="story-description"></p>
+  </div>
 </article>
