--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,7 +1,5 @@
 <div class="share-this">
-  <h2>
-    Del denne saken <a href="#" class="about">Om deling</a>
-  </h2>
+  <h2>Del denne saken <a href="#" class="about">Om deling</a></h2>
   <ul>
     <li class="email">
       <a href="#"><span>Email</span></a>
@@ -9,8 +7,7 @@
     <li class="facebook">
       <a href="#"><span>Facebook</span></a>
     </li>
-    <li class="twitter">
-      <a class="shortenUrl" data-social-url="#" data-target-url="#"><span>Twitter</span></a>
+    <li class="twitter"><a class="shortenUrl" data-social-url="#" data-target-url="#"><span>Twitter</span></a>
     </li>
   </ul>
 </div>
