--- a/css/style.css
+++ b/css/style.css
@@ -6335,9 +6335,11 @@ a.th {
 .section-header .title {
   margin-top: 0;
   margin-bottom: 0;
+  padding: 11px 12px;
   color: white;
   font-size: 1.0625em;
-  font-weight: 600;
+  font-weight: 900;
+  line-height: 20px;
   text-transform: uppercase;
 }
 .section-header a {
