#3437 More HTML refactoring...

--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,7 +1,7 @@
 
 <article itemscope="" itemtype="http://schema.org/Article" class="serp row" hidden>
   <div class="grid-3">
-    <a href="#"><img data-src="" src="" alt=""></a>
+    <a href="#"><img data-src="" src="#" alt=""></a>
   </div>
 
   <div class="grid-9 omega">
