#3437 Static article HTML refactor

--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -1,6 +1,7 @@
 @import 'partials/ad-holder';
 @import 'partials/ads';
 @import 'partials/article';
+@import 'partials/article-list';
 @import 'partials/article-featured';
 @import 'partials/footer';
 @import 'partials/grid-styles';
