--- a/css/style.css
+++ b/css/style.css
@@ -6416,8 +6416,23 @@ header + .ads {
   padding-right: 0;
 }
 
-.body-content p {
-  font-family: "Times New Roman", serif;
+.article .grid-10 {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article--body {
+  font-family: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
+}
+
+.lead {
+  margin: 0 0 0.6em;
+  color: #3F3F3F;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-size: 1.2em;
+  font-weight: 600;
+  line-height: 1.3em;
 }
 
 .article--list {
@@ -6756,6 +6771,7 @@ header + .ads {
 }
 
 .hero {
+  clear: both;
   min-height: 300px;
   overflow: hidden;
   position: relative;
@@ -7848,7 +7864,7 @@ figcaption p {
   line-height: 1.42857;
   margin: 10px 0;
   padding: 0 15px 0 15px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 }
 
 img {
@@ -7874,7 +7890,7 @@ figure.inline-media {
 }
 
 .inline-media p {
-  font-family: "Times New Roman",Times,serif;
+  font-family: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
   font-size: 16px;
   font-style: italic;
   line-height: 20px;
@@ -7908,15 +7924,6 @@ figure.inline-media {
   line-height: 36px;
 }
 
-.lead p {
-  color: #3F3F3F;
-  font-size: 1.2em;
-  line-height: 1.3em;
-  font-weight: 600;
-  margin: 0 0 0.6em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 .meta {
   border: 1px solid #E9E9E9;
   font-size: 14px;
@@ -7927,13 +7934,13 @@ figure.inline-media {
 
 .meta div {
   padding: 2px 30px 4px 30px;
-  background: url(../img/icon-time.png) 0 0 no-repeat;
+  background: url('../img/icon-time.png?1373972578') 0 0 no-repeat;
   float: left;
   margin-bottom: 5px;
 }
 
 .meta .share {
-  background: url(../img/icon-jump.png) 0 0 no-repeat;
+  background: url('../img/icon-jump.png?1373972578') 0 0 no-repeat;
   padding-top: 5px;
 }
 
